--- a/templates/longhorn/0/docker-compose.yml
+++ b/templates/longhorn/0/docker-compose.yml
@@ -13,7 +13,7 @@ driver:
     - /dev:/host/dev
     - /etc/docker/plugins:/etc/docker/plugins
     - /var/lib/rancher/longhorn:/var/lib/rancher/longhorn
-  image: cjellick/longhorn:local1
+  image: cjellick/longhorn:remote1
   command:
     - launch-driver
     - volumedriver
@@ -22,7 +22,7 @@ storagepool:
   labels:
     io.rancher.container.create_agent: 'true'
     io.rancher.container.system: Longhorn
-  image: cjellick/longhorn:local1
+  image: cjellick/longhorn:remote1
   command:
     - launch-driver
     - storagepool
